--- a/html.html
+++ b/html.html
@@ -86,22 +86,22 @@
                     <!-- <form action=""></form> - форма отправки данных -->
                     <form action="">
                         <div>
-                            <span>Имя:&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</span>
+                            <span>Имя:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
                             <input type="text">
                         </div>
                         <br>
                         <div>
-                            <span>Фамилия:&nbsp</span>
+                            <span>Фамилия:&nbsp;</span>
                             <input type="text">
                         </div>
                         <br>
                         <div>
-                            <span>Отчество:&nbsp</span>
+                            <span>Отчество:&nbsp;</span>
                             <input type="text">
                         </div>
                         <br>
                         <div>
-                            <span>Группа:&nbsp&nbsp&nbsp&nbsp&nbsp</span>
+                            <span>Группа:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
                             <select size="1">
                                 <option selected disabled>Выберите группу</option>
                                 <option value="КИУКИу-20-1">КИУКИу-20-1</option>
