--- a/html.html
+++ b/html.html
@@ -84,7 +84,7 @@
                 <br>
                 <div class="form">
                     <!-- <form action=""></form> - форма отправки данных -->
-                    <form>
+                    <form action="null">
                         <div>
                             <span>Имя:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
                             <input type="text">
