--- a/html.html
+++ b/html.html
@@ -13,24 +13,17 @@
         </tr>
         <tr>
             <th>
-                <!-- Гиперссылка -->
                 <div class="link">
-                    <a href="./html_sec.html#here">Относительная гиперссылка</a>
+                    <!-- <a href="./html_sec.html#here">Относительная гиперссылка</a> -->
+                    <a href="./html_sec.html#here" target="_blank">Относительная гиперссылка</a> 
                 </div>
             </th>
             <td>
                 <div class="formatted-text">
                     <p><b><i>E=mc<sup>2</sup></i>,</b> где <b>E</b> - энергия объекта, <b>m</b> - его масса, <b>c</b> - скорость света в вакууме, равная 299 792 458 <i>м/с</i>.</p>
-                    <!-- 
-                        <b></b> - жирный шрифт
-                        <i></i> - курсив
-                        <sup></sup> - отображает шрифт в виде верхнего индекса 
-                    -->
                 </div>
                 <div class="list">
-                    <!-- select - раскрывающийся список -->
                     <select size="1">
-                        <!-- option - пункт списка -->
                         <option selected disabled>Выберите студента</option>
                         <option value="Василенко Дмитро Віталійович">Василенко Дмитро Віталійович</option>
                         <option value="Величко Юрій Віталійович">Величко Юрій Віталійович</option>
@@ -55,18 +48,8 @@
                 </div>
                 <br>
                 <div class="table">
-                    <!-- table - таблица
-                         borfer - тольщина границы
-                         cellpadding - внутренние отступы в ячейках
-                    -->
                     <table border="1" cellpadding="7">
-                        <!-- <caption></caption>  - заголовок к таблице -->
                         <caption align="bottom">Таблица с данными оглавления</caption>
-                        <!-- 
-                            <tr></tr> - строка таблицы
-                            <td></td>, <th></th> - ячейки таблицы
-                            th - заголовочная ячейка
-                        -->
                         <tr>
                             <th>Номер страницы</th>
                             <th>Имя файла</th>
@@ -80,28 +63,45 @@
                             <td><a href="html_sec.html">html_sec.html</a></td>
                         </tr>
                     </table>
+                    <table>
+                        <tr>
+                            <td>1</td>
+                            <td>2</td>
+                            <td>3</td>
+                        </tr>
+                        <tr>
+                            <td>4</td>
+                            <td>5</td>
+                            <td>6</td>
+                        </tr>
+                        <tr>
+                            <td>7</td>
+                            <td>8</td>
+                            <td>9</td>
+                        </tr>
+
+                    </table>
                 </div>
                 <br>
                 <div class="form">
-                    <!-- <form action=""></form> - форма отправки данных -->
-                    <form action="null">
+                    <form action="">
                         <div>
-                            <span>Имя:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+                            <span>Имя:&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</span>
                             <input type="text">
                         </div>
                         <br>
                         <div>
-                            <span>Фамилия:&nbsp;</span>
+                            <span>Фамилия:&nbsp</span>
                             <input type="text">
                         </div>
                         <br>
                         <div>
-                            <span>Отчество:&nbsp;</span>
+                            <span>Отчество:&nbsp</span>
                             <input type="text">
                         </div>
                         <br>
                         <div>
-                            <span>Группа:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+                            <span>Группа:&nbsp&nbsp&nbsp&nbsp&nbsp</span>
                             <select size="1">
                                 <option selected disabled>Выберите группу</option>
                                 <option value="КИУКИу-20-1">КИУКИу-20-1</option>
